<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profilebkg"
    tools:context=".Aurora.Activity.ProfileWithFirebase.ProfileFirebaseActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/profileImg"
        android:layout_marginTop="30dp"
        android:src="@drawable/akwhitelogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleName"
        android:layout_marginTop="10dp"
        android:text="Name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/profileImg"
        app:layout_constraintStart_toStartOf="@id/profileImg"
        app:layout_constraintTop_toBottomOf="@id/profileImg"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleUsername"
        android:text="username"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/titleName"
        app:layout_constraintStart_toStartOf="@id/titleName"
        app:layout_constraintTop_toBottomOf="@id/titleName"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/white_background"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleUsername">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:elevation="5dp"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp">

                <TextView
                    android:id="@+id/correctNumber"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="27"
                    android:textAlignment="center"
                    android:textColor="@color/lavender"
                    android:textSize="@dimen/_26ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/correctanswers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/correctanswers"
                    android:textAlignment="center"
                    android:textColor="@color/lavender"
                    android:textSize="@dimen/_16ssp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:elevation="5dp"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/worng"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="20"
                    android:textAlignment="center"
                    android:textColor="@color/lavender"
                    android:textSize="@dimen/_26ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/wronganswers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wrongwnswers"
                    android:textAlignment="center"
                    android:textColor="@color/lavender"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:elevation="5dp"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/numberofquestions"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="47"
                    android:textAlignment="center"
                    android:textColor="@color/lavender"
                    android:textSize="@dimen/_26ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/numberofquestionstext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/numberofquestions"
                    android:textAlignment="center"
                    android:textColor="@color/lavender"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="@color/lavender"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="name"
                android:textAlignment="viewEnd"
                android:textColor="@color/grey"
                android:textSize="18sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:alpha="0.5"
            android:background="@color/lavender" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email"
                android:textColor="@color/lavender"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="email"
                android:textAlignment="viewEnd"
                android:textColor="@color/grey"
                android:textSize="18sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:alpha="0.5"
            android:background="@color/lavender" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/username"
                android:textColor="@color/lavender"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profileUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="username"
                android:textAlignment="viewEnd"
                android:textColor="@color/grey"
                android:textSize="18sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:alpha="0.5"
            android:background="@color/lavender" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password"
                android:textColor="@color/lavender"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profilePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="password"
                android:textAlignment="viewEnd"
                android:textColor="@color/grey"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <Button

        android:layout_width="0dp"
        android:layout_height="60dp"
        android:id="@+id/editButton"
        android:gravity="center"
        android:text="@string/edit_profile"
        android:textSize="18sp"
        app:cornerRadius = "20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="@id/linearLayout"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>