<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bl"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:backgroundTint="#FFC107"
        android:text="@string/Level"
        android:textColor="#FF9800"
        android:textSize="@dimen/_26ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_qustion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_qustion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_22sdp"
        android:text="@string/Question"
        android:textColor="@color/white"
        android:textSize="@dimen/_22ssp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@id/cardquistion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_level">

    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardquistion"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_33sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        app:cardBackgroundColor="#FFF4CF"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_qustion">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="أين تقع دولة غانا ؟ "
                android:textColor="@color/bl"
                android:textSize="@dimen/_22ssp"
                android:textStyle="italic"
                app:layout_constraintBottom_toTopOf="@+id/eet_answer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <EditText
                android:id="@+id/eet_answer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_44sdp"
                android:layout_marginEnd="@dimen/_44sdp"
                android:layout_marginBottom="@dimen/_22sdp"
                android:ems="10"
                android:hint="@string/enter_a_answer"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TouchTargetSizeCheck" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_test"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_66sdp"
        android:layout_marginTop="@dimen/_55sdp"
        android:layout_marginEnd="@dimen/_66sdp"
        android:backgroundTint="#FFC107"
        android:text="Aurora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardquistion">

    </Button>

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="100dp"
        android:text="Score"
        android:textColor="#89F40D"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintBottom_toTopOf="@+id/cardquistion"
        app:layout_constraintEnd_toStartOf="@+id/tv_score"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/item_textview"
        android:padding="5dp"
        android:text="0"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
